fix: input-number调整类型,button使用icon时不要设置最小宽度
Change-Id: I6cc0c0b20a72ba9993edd02b96fb483bae07c64a

--- a/packages/ui/input-number/src/inputNumber.less
+++ b/packages/ui/input-number/src/inputNumber.less
@@ -18,6 +18,8 @@
 
     &-minus-btn,
     &-plus-btn {
+        line-height: 2;
+
         &.osui-button {
             color: var(--theme-color-text);
         }
