--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -1,11 +1,6 @@
 @osui-modal-class-prefix: osui-modal;
 
 .@{osui-modal-class-prefix} {
-    .@{ant-prefix}-modal-close-x {
-        margin-right: var(--modal-close-icon-margin-right);
-        line-height: var(--modal-close-icon-line-height);
-    }
-
     .@{ant-prefix}-modal-header {
         padding: var(--modal-header-padding);
         border-radius: var(--border-radius-4) var(--border-radius-4) 0 0;
@@ -44,6 +39,9 @@
         border-radius: var(--border-radius-4);
 
         .@{ant-prefix}-modal-close {
+            top: var(--modal-close-top);
+            right: var(--modal-close-right);
+
             svg {
                 height: var(--modal-close-icon-height);
                 color: var(--theme-icon-color);
@@ -110,7 +108,7 @@
     }
 
     .@{ant-prefix}-modal-close {
-        top: 24px;
-        right: 28px;
+        top: var(--modal-close-top);
+        right: var(--modal-close-right);
     }
 }
