--- a/packages/ui/pagination/src/index.less
+++ b/packages/ui/pagination/src/index.less
@@ -6,10 +6,16 @@
         border: 1px solid var(--pagination-item-border-color);
 
         &:hover {
+            background-color: var(--pagination-item-hover-bg);
+
             a {
                 color: var(--pagination-item-hover-color);
             }
         }
+    }
+
+    .@{ant-prefix}-pagination-total-text {
+        color: #84868c;
     }
 
     .@{ant-prefix}-pagination-next,
