Fix: 去掉分页项hover状态下border (#9)
* Fix: 去掉分页项hover状态下border

* Fix: 去掉分页项hover状态下border, 修改字体颜色

* Fix: 去掉分页项hover状态下border, 修改字体颜色

Co-authored-by: zhiguozhan <zhanzhiguo@baidu.com>

--- a/packages/ui/pagination/src/index.less
+++ b/packages/ui/pagination/src/index.less
@@ -7,12 +7,16 @@
 
         &:hover {
             background-color: var(--pagination-item-hover-bg);
-            border: 1px solid var(--pagination-item-hover-border-color);
 
             a {
                 color: var(--pagination-item-hover-color);
             }
         }
+    }
+
+    .@{ant-prefix}-pagination-total-text,
+    .@{ant-prefix}-pagination-options-quick-jumper {
+        color: var(--pagination-prev-next-icon-color);
     }
 
     .@{ant-prefix}-pagination-next,
