fix steps component finished status step color

--- a/packages/ui/steps/src/index.less
+++ b/packages/ui/steps/src/index.less
@@ -115,10 +115,10 @@
         > .@{ant-prefix}-steps-item-container {
             > .@{ant-prefix}-steps-item-icon {
                 line-height: 28px;
-                border-color: var(--color-gray-7);
+                border-color: var(--color-brand-6);
 
                 .@{ant-prefix}-steps-icon {
-                    color: var(--color-gray-7);
+                    color: var(--color-brand-6);
                 }
             }
         }
