fix: 修复input-group-addon样式v1 acud冲突的问题

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -206,3 +206,23 @@
         }
     }
 }
+
+// V1 overrides 覆盖v1的样式，未来要删掉
+.osui-input {
+    .ant-input-group-addon {
+        // affix select
+        .osui-select {
+            .ant-select-selector {
+                height: 32px;
+            }
+        }
+    }
+
+    &:not(&-disabled) {
+        .ant-input-group-addon {
+            background: var(--input-addon-bg);
+        }
+    }
+}
+
+// END V1 overrides 覆盖v1的样式
