fix: input number 增加tailLabel

--- a/packages/ui/input-number/src/inputNumber.less
+++ b/packages/ui/input-number/src/inputNumber.less
@@ -43,6 +43,11 @@
     }
 }
 
+.osui-input-number-tail-label {
+    margin-left: 4px;
+    color: var(--label-color);
+}
+
 .@{ant-prefix}-form-item-has-error {
     .@{osui-input-number-class-prefix} {
         &-input-number,
