修复text-selection-bg

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -24,6 +24,9 @@
 
 @icon-size-base: 16px;
 
+// 主题
+@text-selection-bg: var(--theme-primary-color, #2468F2);
+
 // LINK
 @link-decoration: none;
 @link-hover-decoration: none;
