dev: 调整form的样式

--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -89,6 +89,11 @@
     }
 
     // tooltip
+    // vertical的时候
+    &.@{ant-prefix}-form-vertical .@{ant-prefix}-form-item-label > label .@{ant-prefix}-form-item-tooltip {
+        position: static;
+    }
+
     .@{ant-prefix}-form-item-label > label .@{ant-prefix}-form-item-tooltip {
         position: absolute;
         right: 0;
