dev: 调整input-number

--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -68,7 +68,7 @@
 
         .@{ant-prefix}-form-item-explain {
             position: absolute;
-            bottom: 4px;
+            bottom: 50%;
             left: 100%;
             width: 50%;
             max-width: 200px;
