--- a/packages/ui/input-number/src/inputNumber.less
+++ b/packages/ui/input-number/src/inputNumber.less
@@ -44,6 +44,8 @@
 }
 
 .osui-input-number-tail-label {
+    position: absolute;
+    top: 25%;
     margin-left: 4px;
     color: var(--label-color);
 }
