--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -138,11 +138,11 @@
 }
 
 // text count
-.@{osui-input-class-prefix}-textarea.@{ant-prefix}-input-textarea {
-    &.@{ant-prefix}-input-textarea-show-count::after {
-        position: relative;
-        right: 8px;
-        bottom: 22px;
+.@{osui-input-class-prefix}-textarea {
+    .ant-input-data-count {
+        position: absolute;
+        bottom: 5px;
+        right: 4px;
         color: var(--color-gray-7);
     }
 }
