dev: 修复popconfirm popover

--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -6,7 +6,7 @@
     line-height: var(--popover-line-height);
 
     .@{ant-prefix}-popover-inner {
-        box-shadow: 0 0 8px var(--shadow-color);
+        padding: 0;
     }
 
     .@{ant-prefix}-popover-content {
