--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -223,3 +223,14 @@
         padding: 5px 12px; // antd样式绑定，改token会影响其他
     }
 }
+
+.ant-select-multiple  {
+    .ant-select-selection-item {
+        line-height: 18px;
+        height: 20px;
+    }
+
+    .ant-select-selector:after {
+        height: 20px;
+    }
+}
