.ant 改为 .${ant-prefix}

--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -357,6 +357,6 @@ a.@{osui-button-class-prefix} {
     }
 }
 
-.ant-btn.ant-btn-sm {
+.@{ant-prefix}-btn.@{ant-prefix}-btn-sm {
     padding: 2px 11px;
 }
