--- a/packages/ui/pagination/src/index.less
+++ b/packages/ui/pagination/src/index.less
@@ -304,7 +304,8 @@
             border-color: var(--theme-border-color-disabled);
         }
 
-        .ant-pagination-jump-prev, .ant-pagination-jump-next {
+        .@{ant-prefix}-pagination-jump-prev,
+        .@{ant-prefix}-pagination-jump-next {
             margin-right: 8px;
         }
     }
