--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -224,13 +224,13 @@
     }
 }
 
-.ant-select-multiple  {
-    .ant-select-selection-item {
+.@{ant-prefix}-select-multiple  {
+    .@{ant-prefix}-select-selection-item {
         line-height: 18px;
         height: 20px;
     }
 
-    .ant-select-selector:after {
+    .@{ant-prefix}-select-selector:after {
         height: 20px;
     }
 }
