--- a/packages/ui/steps/src/index.less
+++ b/packages/ui/steps/src/index.less
@@ -234,16 +234,16 @@
     }
 }
 
-.ant-steps-label-vertical:not(.ant-steps-dot) .ant-steps-item-container .ant-steps-item-tail {
+.@{ant-prefix}-steps-label-vertical:not(.@{ant-prefix}-steps-dot) .@{ant-prefix}-steps-item-container .@{ant-prefix}-steps-item-tail {
     margin-inline-start: 58px;
     padding-top: 3.5px;
 }
 
-.ant-steps:not(.ant-steps-dot) .ant-steps-item .ant-steps-item-tail {
+.@{ant-prefix}-steps:not(.@{ant-prefix}-steps-dot) .@{ant-prefix}-steps-item .@{ant-prefix}-steps-item-tail {
     top: 12px;
 }
 
-.ant-steps.ant-steps-dot .ant-steps-item-icon {
+.@{ant-prefix}-steps.@{ant-prefix}-steps-dot .@{ant-prefix}-steps-item-icon {
     height: 8px;
     width: 8px;
 }
