--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -47,7 +47,7 @@
             height: 10px;
             width: 10px;
 
-            .ant-modal-close-x {
+            .@{ant-prefix}-modal-close-x {
                 line-height: 10px;
             }
 
@@ -139,7 +139,7 @@
         height: 10px;
         width: 10px;
 
-        .ant-modal-close-x {
+        .@{ant-prefix}-modal-close-x {
             line-height: 10px;
         }
     }
