--- a/packages/ui/table/src/index.less
+++ b/packages/ui/table/src/index.less
@@ -130,3 +130,100 @@
 .@{ant-prefix}-checkbox-indeterminate .@{ant-prefix}-checkbox-inner {
     border-color: var(--theme-primary-color);
 }
+
+//调整分页器样式
+.@{ant-prefix}-table-wrapper .@{ant-prefix}-table-pagination.@{ant-prefix}-pagination {
+    // 调整分页期 sizeChanger 和 jumper 位置
+    .@{ant-prefix}-pagination-options {
+        order: -10;
+        position: absolute;
+        width: 336px;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .@{ant-prefix}-pagination-item,
+    .@{ant-prefix}-pagination-prev,
+    .@{ant-prefix}-pagination-next {
+        z-index: 99;
+    }
+
+    &.@{ant-prefix}-table-pagination-left {
+        padding-left: 100px;
+
+        .@{ant-prefix}-pagination-options {
+            left: 0;
+        }
+    }
+
+    &.@{ant-prefix}-table-pagination-right {
+        padding-right: 86px;
+
+        .@{ant-prefix}-pagination-options {
+            right: 0
+        }
+    }
+
+    .ant-pagination-options-size-changer {
+        .ant-select-selector {
+            padding: 0 8px;
+        }
+
+        .ant-select-selection-item {
+            padding-inline-end: 23px;
+        }
+    }
+
+    .@{ant-prefix}-pagination-options .@{ant-prefix}-pagination-options-quick-jumper {
+        color: var(--pagination-prev-next-icon-color);
+
+        input {
+            margin: 0 8px;
+        }
+
+        button {
+            appearance: button;
+            position: relative;
+            margin-left: -9px;
+            line-height: 18px;
+            padding: 6px 11px;
+            background-color: var(--btn-default-hover-bg);
+            outline: 0;
+            outline-style: none;
+            box-shadow: 0 2px 0 rgba(0, 0, 0, 0);
+            user-select: none;
+            touch-action: manipulation;
+            border: 1px solid transparent;
+            border-radius: var(--btn-border-radius-base);
+            border-color: var(--btn-default-border-color);
+
+            &:hover {
+                color: var(--btn-default-hover-color);
+                background: var(--btn-default-hover-bg);
+                border-color: var(--btn-default-hover-border-color);
+            }
+
+            &:active {
+                color: var(--btn-default-active-color);
+                background: var(--btn-default-active-bg);
+                border-color: var(--btn-default-active-border-color);
+            }
+
+            &[disabled] {
+                border: 1px solid var(--theme-border-color-disabled);
+                color: var(--btn-default-disable-color);
+                background: var(--btn-default-disable-bg);
+            }
+
+            &:not([disabled]){
+                cursor: pointer;
+                background: var(--btn-default-bg);
+            }
+        }
+    }
+
+    .@{ant-prefix}-pagination-item,
+    .@{ant-prefix}-pagination-prev {
+        margin-inline-end: 0;
+    }
+}
