分页期、Select、button调整 (#18)
* BrandProvider 参数类型微调及Modal、Select、Anchor、auto-complete调整样式

* 分页期、Select、button调整

* 分页期实现调整改为css魔改样式

* brandProvider 参数名改为ConfigProviderPropsProps

* 分页期 index.tsx 代码风格微调

* .ant 改为 .${ant-prefix}

---------

Co-authored-by: gongping01 <gongping01@baidu.com>

--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -223,3 +223,14 @@
         padding: 5px 12px; // antd样式绑定，改token会影响其他
     }
 }
+
+.@{ant-prefix}-select-multiple  {
+    .@{ant-prefix}-select-selection-item {
+        line-height: 18px;
+        height: 20px;
+    }
+
+    .@{ant-prefix}-select-selector:after {
+        height: 20px;
+    }
+}
