--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -356,3 +356,7 @@ a.@{osui-button-class-prefix} {
         padding-bottom: 0;
     }
 }
+
+.@{ant-prefix}-btn.@{ant-prefix}-btn-sm {
+    padding: 2px 11px;
+}
