--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -47,7 +47,7 @@
             height: 10px;
             width: 10px;
 
-            .ant-modal-close-x {
+            .@{ant-prefix}-modal-close-x {
                 line-height: 10px;
             }
 
@@ -139,7 +139,26 @@
         height: 10px;
         width: 10px;
 
-        .ant-modal-close-x {
+        .@{ant-prefix}-modal-close-x {
+            line-height: 10px;
+        }
+    }
+
+    .@{ant-prefix}-modal-confirm-btns {
+        margin-top: 24px;
+
+        .@{ant-prefix}-btn-default {
+            border-color: #D4D6D9;
+        }
+
+        .@{ant-prefix}-btn-primary {
+            border-color: #2468F2;
+            box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
+        }
+        height: 10px;
+        width: 10px;
+
+        .@{ant-prefix}-modal-close-x {
             line-height: 10px;
         }
     }
